packages.json changed

--- a/部署文档.md
+++ b/部署文档.md
@@ -8,8 +8,24 @@ http://144.34.191.175:9000/?repo=cloud-crm-front
 # 开放端口
 
 firewall-cmd --add-port=9000/tcp --permanent
+
+firewall-cmd --add-port=3000/tcp --permanent
+
+firewall-cmd --add-port=3306/tcp --permanent
+
 firewall-cmd --reload
 
 # 查找端口
 
 lsof -i :3000 | awk '{print $1}' | uniq
+
+
+
+
+# docker 
+```
+sudo systemctl stop docker
+Then I get the message :Warning: Stopping docker.service, but it can still be activated by:   docker.socket. So, I stop the socket as well :
+
+sudo systemctl stop docker.socket
+```
