添加 deploy.sh ,完成 build目录同步

--- a/部署文档.md
+++ b/部署文档.md
@@ -29,3 +29,6 @@ Then I get the message :Warning: Stopping docker.service, but it can still be ac
 
 sudo systemctl stop docker.socket
 ```
+
+
+ serve -s build
