--- a/部署文档.md
+++ b/部署文档.md
@@ -19,7 +19,14 @@ firewall-cmd --reload
 
 lsof -i :3000 | awk '{print $1}' | uniq
 
+python3 -m http.server 3000
+ 
+搬瓦工  IzVKy3rliHvr
 
+144.34.191.175
+ 
+
+python3 -m http.server 3000
 
 
 # docker 
@@ -32,3 +39,27 @@ sudo systemctl stop docker.socket
 
 
  serve -s build
+ 
+ 
+ bash -c "$(curl -fsSL https://raw.githubusercontent.com/JeannieStudio/all_install/master/SixForOne_install.sh)"
+
+
+www.meganest.net
+
+caddy 3307
+ssr   3308
+pwd xiake2021
+
+搬瓦工 ss/: 
+
+{
+    "server":"0.0.0.0",
+    "server_port":18321,
+    "password":"teddysun.com",
+    "timeout":300,
+    "user":"nobody",
+    "method":"aes-256-gcm",
+    "fast_open":false,
+    "nameserver":"1.0.0.1",
+    "mode":"tcp_and_udp"
+}
